Issue 13891: Should have more informative hover text on schedule web part  - Added more information to column headers hover text.
 Issue 13890: Study Schedule Web Part headers don't look right
- Styled web part headers to look more like the spec.
 
 Issue 13879: Study Schedule View: Cohort Info Not Included
- Added cohort information to column header hover text.
 
 Also moved a few classes from themeStylesheet.jsp to stylesheet.css and scoped some classes in DataViewsPanel.css to the data-views-container.

--- a/core/webapp/stylesheet.css
+++ b/core/webapp/stylesheet.css
@@ -3574,3 +3574,21 @@ ul.x-tab-strip-top li {
     word-wrap: normal;
 }
 
+.tool-icon {
+	margin-bottom: 20px;
+	text-align: center;
+}
+
+.tool-icon a {
+	text-transform: uppercase;
+	text-decoration: none;
+	font-family: Verdana, Arial, Helvetica, sans serif;
+	color: #999;
+	font-size: 10px;
+	font-weight: bold;
+}
+
+.study-schedule-container .x4-reset .x4-grid-header-ct {
+    background-image: none;
+    background-color: #E7EFF4;
+}
